[package]
name = "ui_dig-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
imgui ="0.11.0"
glow = "0.12.0"
imgui-glow-renderer = "0.11.0"
sdl2 = { version = "0.34.5", features = ["bundled", "static-link"] }
imgui-sdl2-support = "0.11.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

